--- a/Szene4/Scene4.ini
+++ b/Szene4/Scene4.ini
@@ -1,12 +1,12 @@
 ; POV-Ray animation ini file
-Antialias=off
+Antialias=on
 Antialias_Threshold=0.3
 Antialias_Depth=3
 
 Input_File_Name="Scene4.pov"
 
-Initial_Frame=0
-Final_Frame=18 
+Initial_Frame=1
+Final_Frame=270 
 Initial_Clock=0
 Final_Clock=9
 
