--- a/Szene5/Scene5.ini
+++ b/Szene5/Scene5.ini
@@ -1,12 +1,12 @@
 ; POV-Ray animation ini file
-Antialias=off
+Antialias=on
 Antialias_Threshold=0.3
 Antialias_Depth=3
 
 Input_File_Name="Scene5.pov"
 
 Initial_Frame=1
-Final_Frame=10 
+Final_Frame=60 
 Initial_Clock=0
 Final_Clock=1
 
