--- a/Szene7/Scene7.ini
+++ b/Szene7/Scene7.ini
@@ -1,12 +1,12 @@
 ; POV-Ray animation ini file
-Antialias=off
+Antialias=on
 Antialias_Threshold=0.3
 Antialias_Depth=3
 
 Input_File_Name="Scene7.pov"
 
 Initial_Frame=1
-Final_Frame=15 
+Final_Frame=90 
 Initial_Clock=0
 Final_Clock=3
 
